--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,27 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
+    <div class="container">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Lounas</th>
+                    <th scope="col">Kasvis</th>
+                    <th scope="col">Deli</th>
+                    <th scope="col">Jälkiruoka</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <div class="appendHere"></div>
+    </div>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
