Add navbar and styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+        <nav class="navbar navbar-light bg-light nav-center">
+                <span class="navbar-brand" href="">
+                    🍴 Pitskun lounas 🍴
+                </span>
+              </nav>
     <div class="container">
         <table class="table table-hover">
             <thead>
