--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-light bg-light nav-center">
+        <nav class="navbar navbar-light bg-light center">
                 <span class="navbar-brand" href="">
                     🍴 Pitskun lounas 🍴
                 </span>
@@ -30,7 +30,9 @@
             <tbody>
             </tbody>
         </table>
-        <div class="appendHere"></div>
+        <div class="footer-copyright text-center py-3">© 2019: 
+            <a href="https://github.com/MikkoKarvonen/Pitskun_lounas" target="_blank">Mikko Karvonen</a>
+        </div>
     </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
