--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 </span>
               </nav>
     <div class="container">
+        <div class="alert alert-danger" role="alert">
+            Tämä versio tulee poistumaan! Uusi päivitetty versio löytyy osoitteesta <a class="alert-link" href="https://pitskun-lounas.herokuapp.com">https://pitskun-lounas.herokuapp.com</a>.
+        </div>
         <table class="table table-hover">
             <thead>
                 <tr>
